<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.hauiwaterquality.ui.home.HomeViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/iconhaui"
                app:title="Haui"
                app:menu="@menu/menu_home"
                app:titleTextColor="@color/md_theme_light_primary" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layoutRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgNoInternet"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30sp"
                    android:src="@drawable/no_wifi"
                    android:visibility="@{viewModel.checkInternet? View.GONE:View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvNoInternet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/kh_ng_c_k_t_n_i_internet"
                    android:textColor="#3F51B5"
                    android:textSize="30sp"
                    android:visibility="@{viewModel.checkInternet? View.GONE:View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:visibility="@{viewModel.checkInternet? View.VISIBLE:View.GONE}"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgTemperature"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/thermometer"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvHeader"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/nhi_t"
                            android:textColor="#3F51B5"
                            android:textSize="30sp"
                            app:layout_constraintBottom_toBottomOf="@id/imgTemperature"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgTemperature"
                            app:layout_constraintTop_toTopOf="@id/imgTemperature" />

                        <TextView
                            android:id="@+id/tvTimeTemperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imgTemperature" />

                        <TextView
                            android:id="@+id/tvTemperature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvTimeTemperature" />

                        <TextView
                            android:id="@+id/tvWarningTemp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvTemperature" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:visibility="@{viewModel.checkInternet? View.VISIBLE:View.GONE}"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card1"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutOxi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgOxi"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/o2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/n_ng_oxi"
                            android:textColor="#3F51B5"
                            android:textSize="30sp"
                            app:layout_constraintBottom_toBottomOf="@id/imgOxi"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgOxi"
                            app:layout_constraintTop_toTopOf="@id/imgOxi" />

                        <TextView
                            android:id="@+id/tvTimeOxi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imgOxi" />

                        <TextView
                            android:id="@+id/tvOxi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvTimeOxi" />

                        <TextView
                            android:id="@+id/tvWarningOxi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvOxi" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:visibility="@{viewModel.checkInternet? View.VISIBLE:View.GONE}"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card2"
                    app:strokeColor="@color/black"
                    app:strokeWidth="2dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layoutPh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgPh"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/ph"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/ph"
                            android:textColor="#3F51B5"
                            android:textSize="30sp"
                            app:layout_constraintBottom_toBottomOf="@id/imgPh"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgPh"
                            app:layout_constraintTop_toTopOf="@id/imgPh" />

                        <TextView
                            android:id="@+id/tvTimePh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imgPh" />

                        <TextView
                            android:id="@+id/tvPh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvTimePh" />

                        <TextView
                            android:id="@+id/tvWarningPh"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="#3F51B5"
                            android:textSize="26sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvPh" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>